--- a/exchangerates.html
+++ b/exchangerates.html
@@ -3,7 +3,7 @@
 </head>
 <body>
   
-	  <!-- START CODE Attention! Do not modify this code; --><script>var fm = "USD";var to = "JPY";var tz = "9";var sz = "1x127";var lg = "ja";var st = "success";var cd = 0;var am = 1</script><script src="//currencyrate.today/exchangerates"></script><div style="text-align:right"><a href="https://currencyrate.today">CurrencyRate</a></div><!-- Attention! Do not modify this code; END CODE -->
+	  <!-- START CODE Attention! Do not modify this code; --><script>var fm = "USD";var to = "JPY";var tz = "9";var sz = "1x127";var lg = "ja";var st = "success";var cd = 0;var am = 1</script><script src="//currencyrate.today/exchangerates"></script><!-- Attention! Do not modify this code; END CODE -->
   
 </body>
 </html>
