--- a/Sphere_Splash/all.html
+++ b/Sphere_Splash/all.html
@@ -22,13 +22,13 @@
 
         /* ライトモード */
         .light-mode {
-            background-color: #f8f9fa;
+            background-color: #ffffff;
             color: #333;
         }
 
         /* ダークモード */
         .dark-mode {
-            background-color: #231F20;
+            background-color: #191919;
             color: #fff;
         }
 
