--- a/Sphere_Splash/all.html
+++ b/Sphere_Splash/all.html
@@ -298,7 +298,7 @@
                 const { isDarkMode } = this.state;
                 
                 const themeColors = {
-                    background: isDarkMode ? '#231F20' : '#f8f9fa',
+                    background: isDarkMode ? '#191919' : '#ffffff',
                     circle: isDarkMode ? '#fff' : '#333',
                     canvasBg: isDarkMode ? 'rgba(25,25,25,0)' : 'rgba(0,0,0,0)'
                 };
