ref: レスポンシブデザインに対応 :recycle:

--- a/250608/index.html
+++ b/250608/index.html
@@ -1,5 +1,25 @@
-<script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
-<script src="ease.js"></script>
-<script src="palettes.js"></script>
-<script src="tiles.js"></script>
-<script src="sketch.js"></script>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>p5.js Sketch</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden; /* スクロールバーが表示されないようにする */
+        }
+        canvas {
+            display: block; /* キャンバスの下に余白ができないようにする */
+        }
+    </style>
+</head>
+<body>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
+    <script src="ease.js"></script>
+    <script src="palettes.js"></script>
+    <script src="tiles.js"></script>
+    <script src="sketch.js"></script>
+</body>
+</html>
